crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__message_tools_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 25
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"⏺ OpenRoom(design)                                                                                                      "
"  ⎿  └─ #design                                                                                                         "
"        ├─ helper                                                                                                       "
"        ├─ scout                                                                                                        "
"        └─ listening                                                                                                    "
"           └─ watcher [ 120s ]                                                                                          "
"                                                                                                                        "
"⏺ SendMessage(#design)                                                                                                  "
"  ⎿  to    #design                                                                                                      "
"     from  parent                                                                                                       "
"     read  by every member, as it lands                                                                                 "
"                                                                                                                        "
"⏺ ListAgents                                                                                                            "
"  ⎿  ├─ helper [ busy ]                                                                                                 "
"     └─ scout [ idle ]                                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                                   fake-1"
