crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__message_tools_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 24
expression: "draw_tree(80, 24, tree, ui, now)"
---
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"⏺ OpenRoom(design)                                                              "
"  ⎿  └─ #design                                                                 "
"        ├─ helper                                                               "
"        ├─ scout                                                                "
"        └─ listening                                                            "
"           └─ watcher [ 120s ]                                                  "
"                                                                                "
"⏺ SendMessage(#design)                                                          "
"  ⎿  to    #design                                                              "
"     from  parent                                                               "
"     read  by every member, as it lands                                         "
"                                                                                "
"⏺ ListAgents                                                                    "
"  ⎿  ├─ helper [ busy ]                                                         "
"     └─ scout [ idle ]                                                          "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
