crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__no_colour_idle.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "in_look(no_colour(), || draw_tree(80, 24, &tree, &ui, now))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> run the tests                                                                 "
"                                                                                "
"⏺ All 33 pass.                                                                  "
"                                                                                "
"  • `wrap` is done                                                              "
"  • `keys` is done                                                              "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
