crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__owed_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 31
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                    owed                "
"                                                                                                  room     owed         "
"                                                                                                  ─────────────────     "
"                                                                                                  #design  reviewer     "
"                                                                                                  #design  @all         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────╮                        "
"│ ✻ Welcome to bingo!                                                                          │                        "
"│                                                                                              │                        "
"│   /help for help · /login codex to use a subscription                                        │                        "
"│   cwd: /tmp/project                                                                          │                        "
"╰──────────────────────────────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"> ask the room whether the plan is thin                                                                                 "
"                                                                                                                        "
"⏺ Asked in #design.                                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────╮                        "
"│ > ask anything · / for commands · ! for shell                                                │                        "
"╰──────────────────────────────────────────────────────────────────────────────────────────────╯                        "
"? for shortcuts                                                                                                   fake-1"
