crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__owed_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 24
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> ask the room whether the plan is thin                                         "
"                                                                                "
"⏺ Asked in #design.                                                             "
"                                                                                "
"  owed                                                                          "
"room     owed      asked                                                        "
"────────────────────────                                                        "
"#design  reviewer  14:02                                                        "
"#design  @all      14:09                                                        "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
