crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__pager_sheet_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"Glob(crates/**/*.rs)  j/k · pgup/pgdn · g/G · / to search · esc                                                         "
"                                                                                                                        "
"crates/bingo-surface-tui/src/file_1.rs                                                                                  "
"crates/bingo-surface-tui/src/file_2.rs                                                                                  "
"crates/bingo-surface-tui/src/file_3.rs                                                                                  "
"crates/bingo-surface-tui/src/file_4.rs                                                                                  "
"crates/bingo-surface-tui/src/file_5.rs                                                                                  "
"crates/bingo-surface-tui/src/file_6.rs                                                                                  "
"crates/bingo-surface-tui/src/file_7.rs                                                                                  "
"crates/bingo-surface-tui/src/file_8.rs                                                                                  "
"crates/bingo-surface-tui/src/file_9.rs                                                                                  "
"crates/bingo-surface-tui/src/file_10.rs                                                                                 "
"crates/bingo-surface-tui/src/file_11.rs                                                                                 "
"crates/bingo-surface-tui/src/file_12.rs                                                                                 "
"crates/bingo-surface-tui/src/file_13.rs                                                                                 "
"crates/bingo-surface-tui/src/file_14.rs                                                                                 "
"crates/bingo-surface-tui/src/file_15.rs                                                                                 "
"crates/bingo-surface-tui/src/file_16.rs                                                                                 "
"crates/bingo-surface-tui/src/file_17.rs                                                                                 "
"crates/bingo-surface-tui/src/file_18.rs                                                                                 "
"crates/bingo-surface-tui/src/file_19.rs                                                                                 "
"crates/bingo-surface-tui/src/file_20.rs                                                                                 "
"crates/bingo-surface-tui/src/file_21.rs                                                                                 "
"crates/bingo-surface-tui/src/file_22.rs                                                                                 "
"crates/bingo-surface-tui/src/file_23.rs                                                                                 "
"crates/bingo-surface-tui/src/file_24.rs                                                                                 "
"crates/bingo-surface-tui/src/file_25.rs                                                                                 "
"crates/bingo-surface-tui/src/file_26.rs                                                                                 "
"crates/bingo-surface-tui/src/file_27.rs                                                                                 "
"crates/bingo-surface-tui/src/file_28.rs                                                                                 "
"crates/bingo-surface-tui/src/file_29.rs                                                                                 "
"crates/bingo-surface-tui/src/file_30.rs                                                                                 "
"crates/bingo-surface-tui/src/file_31.rs                                                                                 "
"crates/bingo-surface-tui/src/file_32.rs                                                                                 "
"crates/bingo-surface-tui/src/file_33.rs                                                                                 "
"crates/bingo-surface-tui/src/file_34.rs                                                                                 "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
