crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__pager_sheet_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"Glob(crates/**/*.rs)  j/k · pgup/pgdn · g/G · / to search · esc                 "
"                                                                                "
"crates/bingo-surface-tui/src/file_1.rs                                          "
"crates/bingo-surface-tui/src/file_2.rs                                          "
"crates/bingo-surface-tui/src/file_3.rs                                          "
"crates/bingo-surface-tui/src/file_4.rs                                          "
"crates/bingo-surface-tui/src/file_5.rs                                          "
"crates/bingo-surface-tui/src/file_6.rs                                          "
"crates/bingo-surface-tui/src/file_7.rs                                          "
"crates/bingo-surface-tui/src/file_8.rs                                          "
"crates/bingo-surface-tui/src/file_9.rs                                          "
"crates/bingo-surface-tui/src/file_10.rs                                         "
"crates/bingo-surface-tui/src/file_11.rs                                         "
"crates/bingo-surface-tui/src/file_12.rs                                         "
"crates/bingo-surface-tui/src/file_13.rs                                         "
"crates/bingo-surface-tui/src/file_14.rs                                         "
"crates/bingo-surface-tui/src/file_15.rs                                         "
"crates/bingo-surface-tui/src/file_16.rs                                         "
"crates/bingo-surface-tui/src/file_17.rs                                         "
"crates/bingo-surface-tui/src/file_18.rs                                         "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
