crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__panel_sheet_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"❯ bingo.tasks · tasks                                                           "
"  id  status       subject         owner                                        "
"  ─────────────────────────────────────────                                     "
"   1  pending      write the plan  –                                            "
"   2  in_progress  ship it         reviewer                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                       in #design"
